--- a/src/AdventOfCode.ConsoleApp/AdventOfCode.ConsoleApp.csproj
+++ b/src/AdventOfCode.ConsoleApp/AdventOfCode.ConsoleApp.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="CsvHelper" Version="30.0.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
   </ItemGroup>
 
 </Project>
